@@ -1,3 +1,9 @@
+2011-02-09  Alan Modra  <amodra@gmail.com>
+
+	* elf64-ppc.c (ppc64_elf_edit_toc): Don't free toc relocs until
+	we are done.  When optimising large toc, check that a global
+	symbol on a toc reloc is defined in a kept section.
+
 2011-02-08  Nick Clifton  <nickc@redhat.com>
 
 	PR binutils/12467
